--- a/neighbor_app/templates/home.html
+++ b/neighbor_app/templates/home.html
@@ -41,27 +41,27 @@
 
                     {% for x in images %}
                 
-                      <div data-toggle="modal" data-target="#{{x.id}}" style="width:69%;margin-left:30%" >
+                      <!-- <div data-toggle="modal" data-target="#{{x.id}}" style="width:69%;margin-left:30%" > -->
                         <!--Display   images  -->
-                        <img class="img-responsive"style="width:50%;padding-top:5%" src="{{x.image.url}}" alt="">
-                      </div>
+                        <!-- <img class="img-responsive"style="width:50%;padding-top:5%" src="{{x.neighborhood_name}}" alt="">
+                      </div> -->
                     
                         <div  style="margin-left:30%;margin-top:2%">
-                                <div>
+                                <!-- <div>
                                   <p>Title:{{x.title}}</p> 
                                 <p>{{x.description}}</p>
-                                </div>
+                                </div> -->
                               
-                                <a href="{{x.link}}"> Visit This Site</a>
+                                <!-- <a href="{{x.link}}"> Visit This Site</a> -->
                                 <br>
-                                <a href="{% url 'rate' x.id %}"> vote</a>
+                                <a href="{% url 'neighborhood' x.id %}"> {{x.neighborhood}}</a>
                                 <br>
-                                <a href="{% url 'comment' x.id %}">Live Your Comment</a>
-                            
-                                {% for coment in x.comment_set.all %}
+                                <!-- <a href="{% url 'comment' x.id %}">Live Your Comment</a>
+                             -->
+                                <!-- {% for coment in x.comment_set.all %}
                                 <p>{{coment.comment}}</p>
                                 {% empty %}
-                                {% endfor %}
+                                {% endfor %} -->
                             
                         
                         </div>
