--- a/neighbor_app/templates/navbar.html
+++ b/neighbor_app/templates/navbar.html
@@ -76,7 +76,7 @@
 
   <div class="navbar" class="row"style="width:100%;height:50%">
     <div class="col-md-2">
-    <a href="{%url 'image'%}">HomePage</a>
+    <a href="{%url 'neighborhood'%}">HomePage</a>
     </div>
   <div class="col-md-2">
     <a href="{%url 'profile' %}">Profile</a>
