--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -30,7 +30,7 @@
 <div class="one" style="width:100%">
 
         <div class="col-md-2" style="width:30%;margin-left: 40%;height:20%;padding-bottom:5%;margin-top: 5%">
-          <a href="{%url 'new_post'%}" class="button">Upload your Project</a>
+          <a href="{%url 'new_post'%}" class="button">Add Your Post Here</a>
         
         </div>
       <!-- <div style="width:100%;height:30%">
