neighborhood view function

--- a/neighbor_app/templates/home.html
+++ b/neighbor_app/templates/home.html
@@ -14,6 +14,8 @@
  
  </style>
 
+
+
       <!-- <div style="width:100%;height:30%">
           <img src="https://www.bandt.com.au/information/uploads/2018/10/iStock-939840782-1-1260x840.jpg" style="width:70%;height:10%;margin-left: 15%">
       </div> -->
@@ -35,7 +37,7 @@
                               
                                 <!-- <a href="{{x.link}}"> Visit This Site</a> -->
                                 <br>
-                                <a href="{% url 'neighborhood'  %}"> {{x.neighborhood_name}}</a>
+                                <a href="{% url 'index'  %}"> {{x.neighborhood_name}}</a>
                                 <br>
                                 <!-- <a href="{% url 'comment' x.id %}">Live Your Comment</a>
                              -->
