--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -30,7 +30,7 @@
 <div class="one" style="width:100%">
 
         <div class="col-md-2" style="width:30%;margin-left: 40%;height:20%;padding-bottom:5%;margin-top: 5%">
-          <a href="{%url 'new_post'%}" class="button">Add Your Post Here</a>
+          <a href="{%url 'new_post'%}" class="button">Add Your Post </a>
         
         </div>
      
@@ -47,7 +47,7 @@
                         <div  style="margin-left:30%;margin-top:2%">
                                 <div>
                                   <p>Title:{{m.title}}</p> 
-                                <p>{{m.posted_by}}</p>
+                                  <p>{{m.posted_by}}</p>
                                 </div>
                               
                                 <!-- <a href="{{x.link}}"> Visit This Site</a> -->
