--- a/neighbor_app/templates/home.html
+++ b/neighbor_app/templates/home.html
@@ -37,7 +37,7 @@
                               
                                 <!-- <a href="{{x.link}}"> Visit This Site</a> -->
                                 <br>
-                                <a href="{% url 'index'  %}"> {{x.neighborhood_name}}</a>
+                                <a href="{% url 'neighborhood'  %}"> {{x.neighborhood_name}}</a>
                                 <br>
                                 <!-- <a href="{% url 'comment' x.id %}">Live Your Comment</a>
                              -->
