creating a neighbohood form

--- a/neighbor_app/templates/comment.html
+++ b/neighbor_app/templates/comment.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%}
+<!-- {%extends "base.html"%}
 {% load bootstrap3 %}
 {%load static%}
 {% load staticfiles %}
@@ -8,9 +8,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>You can edit your information here</title>
  {{form.media}}
-{% block styles %} {% bootstrap_css %}
+{% block styles %} {% bootstrap_css %} -->
  <!-- <link rel="stylesheet" href="{% static 'css/news.css' %}"> {% endblock %} -->
-</head>
+<!-- </head>
 <body>
 <div class="container" style="background-color:#fff;">
     <div class="row">
@@ -25,4 +25,4 @@
     </div>
 </div>
 </body>
-{% endblock %}
+{% endblock %} -->
