--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -39,9 +39,9 @@
 
                     {% for m in posts %}
                 
-                      <div data-toggle="modal" data-target="#{{m.id}}" style="width:69%;margin-left:30%" > -->
+                      <div data-toggle="modal" data-target="#{{m.id}}" style="width:69%;margin-left:30%" > 
                         <!-- Display   images  -->
-                        <img class="img-responsive"style="width:50%;padding-top:5%" src="{{m.post_description}}" alt="">
+                        <p>{{m.post_description}}"</p>>
                       </div>
                     
                         <div  style="margin-left:30%;margin-top:2%">
@@ -49,19 +49,6 @@
                                   <p>Title:{{m.title}}</p> 
                                   <p>{{m.posted_by}}</p>
                                 </div>
-                              
-                                <!-- <a href="{{x.link}}"> Visit This Site</a> -->
-                                <!-- <br>
-                                <a href="{% url 'neighborhood'  %}"> {{x.neighborhood_name}}</a>
-                                <br> -->
-                                <!-- <a href="{% url 'comment' x.id %}">Live Your Comment</a>
-                             -->
-                                <!-- {% for coment in x.comment_set.all %}
-                                <p>{{coment.comment}}</p>
-                                {% empty %}
-                                {% endfor %} -->
-                            
-                        
                         </div>
                               <hr>
                         {%endfor%}
