--- a/neighbor_app/templates/navbar.html
+++ b/neighbor_app/templates/navbar.html
@@ -76,11 +76,12 @@
 
   <div class="navbar" class="row"style="width:100%;height:50%">
     <div class="col-md-2">
-    <a href="{%url 'index'%}">HomePage</a>
+    <a href="{%url 'home'%}">HomePage</a>
     </div>
   <div class="col-md-2">
     <a href="{%url 'profile' %}">Profile</a>
   </div>
+  
   
   <div class="col-md-2">
     <a href="/logout">Logout</a>
