--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -30,7 +30,7 @@
 <div class="one" style="width:100%">
 
         <div class="col-md-2" style="width:30%;margin-left: 40%;height:20%;padding-bottom:5%;margin-top: 5%">
-          <a href="{%url 'new_post'%}" class="button">Add Your Post </a>
+          <a href="{%url 'new_post' neighborhood_id %}" class="button">Add Your Post </a>
         
         </div>
      
@@ -41,12 +41,13 @@
                 
                       <div data-toggle="modal" data-target="#{{m.id}}" style="width:69%;margin-left:30%" > 
                         <!-- Display   images  -->
-                        <p>{{m.post_description}}"</p>>
+                       
                       </div>
                     
                         <div  style="margin-left:30%;margin-top:2%">
                                 <div>
-                                  <p>Title:{{m.title}}</p> 
+                                  <p>Title:{{m.title}}</p>
+                                  <p>{{m.post_description}}</p> 
                                   <p>{{m.posted_by}}</p>
                                 </div>
                         </div>
