--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -23,36 +23,51 @@
   margin: 4px 2px;
   cursor: pointer;
 } 
- 
+  
  </style>
 
 
-<div class="one" style="width:100%">
+<div class="one" style="width:100%;height: 100%;font-family: 'ZCOOL XiaoWei', serif">
+        <div class="jacky" style="width:100%;height: 50%">
+            <div class="col-md-2" style="width:30%;height:20%;padding-bottom:5%;margin-top: 5%">
+              <a href="{%url 'new_post' neighborhood_id %}" class="button">Add Your Post </a>
+            </div>
 
-        <div class="col-md-2" style="width:30%;margin-left: 40%;height:20%;padding-bottom:5%;margin-top: 5%">
-          <a href="{%url 'new_post' neighborhood_id %}" class="button">Add Your Post </a>
-        
+            <div class="col-md-2" style="width:30%;height:20%;padding-bottom:5%;margin-top: 5%">
+              <a href="{%url 'add_business' neighborhood_id %}" class="button">Add A Business </a>
+            </div>
         </div>
-     
 
-          <div class="row">
+          <div class="row" style="width:100%;height: 50%">
 
                     {% for m in posts %}
                 
-                      <div data-toggle="modal" data-target="#{{m.id}}" style="width:69%;margin-left:30%" > 
-                        <!-- Display   images  -->
-                       
-                      </div>
                     
-                        <div  style="margin-left:30%;margin-top:2%">
+                        <div  style="margin-left:30%;margin-top:2%;font-family: 'ZCOOL XiaoWei', serif">
                                 <div>
                                   <p>Title:{{m.title}}</p>
                                   <p>{{m.post_description}}</p> 
-                                  <p>{{m.posted_by}}</p>
+                                  <p>Posted by:{{m.posted_by}}</p>
                                 </div>
                         </div>
                               <hr>
                         {%endfor%}
+              </div>
+              <div class="row">
+
+                {% for i in businesseses %}
+            
+                 
+                
+                    <div  style="margin-left:30%;margin-top:2%">
+                            <div>
+                              <p>{{i.business_name}}</p>
+                              <p>{{i.email_adress}}</p> 
+                              <p>{{i.posted_by}}</p>
+                            </div>
+                    </div>
+                          <hr>
+                    {%endfor%}
               </div>
       
 </div>
