--- a/neighbor_app/templates/base.html
+++ b/neighbor_app/templates/base.html
@@ -7,7 +7,7 @@
 
   {% block styles %}
   {% bootstrap_css %}
-   
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
   {% endblock %}
 
 </head>
