--- a/neighbor_app/templates/home.html
+++ b/neighbor_app/templates/home.html
@@ -1,11 +1,20 @@
 {%extends 'base.html'%}
 {{block.super}}
 {% block content %}
+<style>
+.one{
+      background-image: url("https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiH9Ljf3NblAhWB4IUKHWV0BkAQjRx6BAgBEAQ&url=https%3A%2F%2Fwallpapercave.com%2Fluxury-house-wallpapers&psig=AOvVaw3s-4-sv7BSfFB57bbW73T2&ust=1573168788750925");
+      background-size:cover;
+      background-repeat: no-repeat;
+}
 
 
 
+</style>
 
-<div class="one" style="width:100%">
+
+
+<div class="one" style="width:100%;height:100%;font-family: 'ZCOOL XiaoWei', serif;font-size:16px">
 
       
           <div class="row">
