--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -27,38 +27,43 @@
  </style>
 
 
-<div class="one" style="width:100%;height: 100%;font-family: 'ZCOOL XiaoWei', serif">
-        <div class="jacky" style="width:100%;height: 50%">
-            <div class="col-md-2" style="width:30%;height:20%;padding-bottom:5%;margin-top: 5%">
+<div class="row" style="width:100%;height: 100%;font-family: 'ZCOOL XiaoWei', serif;font-size:16px">
+  <div class="card">
+    <div class="card-body">
+        <div class="col-md-8" style="width:60%;height: auto">
+            <div  style="height:20%;padding-bottom:5%;margin-top:5%;margin-left: 30%;font-size:16px">
               <a href="{%url 'new_post' neighborhood_id %}" class="button">Add Your Post </a>
             </div>
+            <div  style="width:100%;height: 50%">
+                <h2 style="margin-left: 30%">Neighborhood Events:</h2>
+                <p style="margin-left: 30%">---------------------------------------------------</p>
+              {% for m in posts %}
+          
+              
+                  <div  style="margin-left:30%;margin-top:2%;font-family: 'ZCOOL XiaoWei', serif">
+                          <div>
+                            <p>Title:{{m.title}}</p>
+                            <p>{{m.post_description}}</p> 
+                            <p>Posted by:{{m.posted_by}}</p>
+                          </div>
+                  </div>
+                        <hr>
+                  {%endfor%}
+            </div>
+          </div>
+    </div>
+  </div>
 
-            <div class="col-md-2" style="width:30%;height:20%;padding-bottom:5%;margin-top: 5%">
+          <div class="col-md-4" style="width:40%;height: auto;margin-top: 10%">
+            <div  style="width:30%;height:30%;padding-bottom:5%;margin-top: 5%;margin-left: 30%;font-size:15px">
               <a href="{%url 'add_business' neighborhood_id %}" class="button">Add A Business </a>
             </div>
-        </div>
-
-          <div class="row" style="width:100%;height: 50%">
-
-                    {% for m in posts %}
-                
-                    
-                        <div  style="margin-left:30%;margin-top:2%;font-family: 'ZCOOL XiaoWei', serif">
-                                <div>
-                                  <p>Title:{{m.title}}</p>
-                                  <p>{{m.post_description}}</p> 
-                                  <p>Posted by:{{m.posted_by}}</p>
-                                </div>
-                        </div>
-                              <hr>
-                        {%endfor%}
-              </div>
-              <div class="row">
+            <h2 style="margin-left: 30%">Available Businesses:</h2>
+            <p style="margin-left: 30%">----------------------------------------------</p>
+              <div >
 
                 {% for i in businesseses %}
             
-                 
-                
                     <div  style="margin-left:30%;margin-top:2%">
                             <div>
                               <p>{{i.business_name}}</p>
@@ -69,6 +74,7 @@
                           <hr>
                     {%endfor%}
               </div>
+            </div>
       
 </div>
 
