--- a/neighbor_app/templates/profile.html
+++ b/neighbor_app/templates/profile.html
@@ -26,8 +26,8 @@ margin-left: 50%;
    <div class="col-md-4">
     
         <div class="media">
-          <img src="{{user.profile.profile_picture.url}}" alt="Profile" class="img_profilepic" >
-          <h4 class="account-heading">{{user.username}}</h4>
+          <!-- <img src="{{user.profile.profile_picture.url}}" alt="Profile" class="img_profilepic" > -->
+          <h4 class="account-heading">{{user.name}}</h4>
           <p class="text-secondary ml-4">Email:{{user.email}}</p>
           <p class="text-secondary ml-4">Bio:{{user.profile.bio}}</p>
         </div>
@@ -42,14 +42,8 @@ margin-left: 50%;
         </div>
 </div>
  <hr>
- <div class="row" style="width:100%" >
-   {% for user in pictures %}
-   <div class="col-md-3" style="margin-left: 5%;height: 30%">
-     <img src="{{user.image.url}}" class="img-responsive" style="width:70%;height: 30%">
-   </div>
-   {% endfor %}
- </div>
+
 </div>
-</div>
+
  
  {% endblock %}
