--- a/neighbor_app/templates/navbar.html
+++ b/neighbor_app/templates/navbar.html
@@ -12,6 +12,8 @@
     .navbar {
       overflow: hidden;
       background-color: #333;
+      width: 100%;
+      
     }
 
     .navbar a {
@@ -74,7 +76,7 @@
 
 <body>
 
-  <div class="navbar" class="row"style="width:100%;height:50%">
+  <div class="navbar" class="row"style="width:100%;height:50%;font-family: 'ZCOOL XiaoWei', serif;font-size:16px">
     <div class="col-md-2">
     <a href="{%url 'home'%}">HomePage</a>
     </div>
@@ -92,10 +94,10 @@
 
         <div class="col-md-2">
 
-          <form class="navbar-form" role="search" action="{% url 'search_picture' %}">
+          <form class="navbar-form" role="search" action="{% url 'search_business' %}">
   
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search Picture" name="title">
+              <input type="text" class="form-control" placeholder="Search Business" name="name">
               <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
               </div>
