--- a/neighbor_app/templates/neighborhood.html
+++ b/neighbor_app/templates/neighborhood.html
@@ -12,7 +12,7 @@
     width:100%;
   } 
   .button {
-  background-color: #4CAF50;
+  background-color: black;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -28,9 +28,10 @@
 
 
 <div class="row" style="width:100%;height: 100%;font-family: 'ZCOOL XiaoWei', serif;font-size:16px">
-  <div class="card">
-    <div class="card-body">
-        <div class="col-md-8" style="width:60%;height: auto">
+  <div class="col-md-8" style="width:60%;height: auto">
+  <div class="panel">
+    <div class="panel-body">
+        
             <div  style="height:20%;padding-bottom:5%;margin-top:5%;margin-left: 30%;font-size:16px">
               <a href="{%url 'new_post' neighborhood_id %}" class="button">Add Your Post </a>
             </div>
@@ -42,9 +43,9 @@
               
                   <div  style="margin-left:30%;margin-top:2%;font-family: 'ZCOOL XiaoWei', serif">
                           <div>
-                            <p>Title:{{m.title}}</p>
+                            <p>Title: {{m.title}}</p>
                             <p>{{m.post_description}}</p> 
-                            <p>Posted by:{{m.posted_by}}</p>
+                            <p>Posted by: {{m.posted_by}}</p>
                           </div>
                   </div>
                         <hr>
@@ -54,7 +55,10 @@
     </div>
   </div>
 
+
           <div class="col-md-4" style="width:40%;height: auto;margin-top: 10%">
+            <div class="panel" >
+            <div class="panel-body">
             <div  style="width:30%;height:30%;padding-bottom:5%;margin-top: 5%;margin-left: 30%;font-size:15px">
               <a href="{%url 'add_business' neighborhood_id %}" class="button">Add A Business </a>
             </div>
@@ -66,9 +70,9 @@
             
                     <div  style="margin-left:30%;margin-top:2%">
                             <div>
-                              <p>{{i.business_name}}</p>
-                              <p>{{i.email_adress}}</p> 
-                              <p>{{i.posted_by}}</p>
+                              <p>Business Name: {{i.business_name}}</p>
+                              <p>Email: {{i.email_adress}}</p> 
+                              <p>posted_by: {{i.posted_by}}</p>
                             </div>
                     </div>
                           <hr>
@@ -76,6 +80,8 @@
               </div>
             </div>
       
+</div>
+</div>
 </div>
 
 
