--- a/neighbor_app/templates/profile.html
+++ b/neighbor_app/templates/profile.html
@@ -20,23 +20,23 @@ margin-left: 50%;
 
   }
 </style>
-<div class="container">
+<div class="container" style="font-family: 'ZCOOL XiaoWei', serif;font-size:16px">
    <div  class="mamy">
  <div class="row" >
    <div class="col-md-4">
     
         <div class="media">
           <!-- <img src="{{user.profile.profile_picture.url}}" alt="Profile" class="img_profilepic" > -->
-          <h4 class="account-heading">{{user.name}}</h4>
+          <h4 class="account-heading">User Name:{{profile.name}}</h4>
           <p class="text-secondary ml-4">Email:{{user.email}}</p>
-          <p class="text-secondary ml-4">Bio:{{user.profile.bio}}</p>
+          <p class="text-secondary ml-4">Neighborhood Name:{{user.profile.neighborhoods}}</p>
         </div>
   
    </div>
    <div class="col-md-8">
         
           <div class="hello">
-            <button class="btn btn-secondary" style="margin-left:5%;"><a href="{% url 'profile_edit' %}" >Edit Profile</a></button><i style="font-size: 28px;"></i>
+            <button class="btn btn-secondary" style="margin-left:5%;"><a href="{% url 'add_profile' %}" >Edit Profile</a></button><i style="font-size: 28px;"></i>
           </div>
           </div>
         </div>
