--- a/neighbor_app/templates/search.html
+++ b/neighbor_app/templates/search.html
@@ -3,8 +3,8 @@
 <div class="container">
 
   <div class="row">
-    {% if images%}
-      <h2>Found {{ images|length }} of searched term {{message}}</h2>
+    {% if businesses%}
+      <h2>Found {{ businesses|length }} of searched term {{message}}</h2>
     {% else %}
       <h2> Found 0 articles for the search term {{message}}</h2>
     {% endif %}
@@ -13,12 +13,14 @@
 
   <div class="row">
 
-  {% if images %}
-    {% for picture in images %}
+  {% if businesses %}
+    {% for business in businesses %}
       <div class="col-md-3">
-        <p>{{picture.title}}
-        </p>
-          <img style="width:120%;padding-top:20%;padding-left:20%" src="{{picture.image.url}}" alt="">
+        <p>{{business.business_name}}</p>
+        <p>{{business.email_adress}}</p>
+        <p>{{business.neighborhoods}}</p>
+        
+          
       </div>
     {% endfor %}
   {% endif %}
